<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background">

<LinearLayout 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="25dp"
  android:paddingRight="25dp"
  android:orientation="vertical"
  >
  
	<TextView 
	    android:text="@string/spielDatum" 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/>
        
    <Button 
        android:id="@+id/spielDatum"
        android:background="@drawable/button_blue"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/spielDatum"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24dip" 
    />	

	<TextView 
	    android:text="@string/spielLaenge" 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/>

	<EditText 
	    android:id="@+id/spielHalbzeitlaenge"
	    android:inputType="phone"
	    android:maxLength="2"
		android:layout_width="144dp"
        android:layout_height="48dp"
	/>

	<TextView 
	    android:text="@string/spielHeim" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/>

	<Button 
        android:id="@+id/spielHeim"
        android:background="@drawable/button_blue"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/spielHeimTeam"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24dip" 
    />	
    
	<TextView 
	    android:text="@string/spielAusw" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/> 
	    
	<Button 
        android:id="@+id/spielAusw"
        android:background="@drawable/button_blue"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/spielAuswTeam"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24dip" 
    />
	
	<Button 
        android:id="@+id/ticker"
        android:background="@drawable/button_orange"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/spielTicker"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24dip" 
        android:layout_marginTop="30dp"
    />
	
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="48dp"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        >
        	
        	<Button 
        		android:id="@+id/save"
        		android:background="@drawable/button_green"
        		android:layout_width="fill_parent"
        		android:layout_height="48dp"
        		android:text="@string/speichern"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/delete"
        		android:background="@drawable/button_red"
        		android:layout_width="fill_parent"
        		android:layout_height="48dp"
        		android:text="@string/loeschen"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>
</ScrollView>