<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background">

<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="25dp"
  android:paddingRight="25dp"
  android:orientation="vertical"
  >
  
	<TextView 
	    android:text="@string/mannschaftName" 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/>
        
	<EditText
	    android:id="@+id/mannschaftName"
	    android:inputType="text"
	    android:layout_width="fill_parent"
        android:layout_height="48dp"
	/>

	<TextView 
	    android:text="@string/mannschaftKuerzel" 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="left|bottom"
        android:textColor="@color/standardfarbe"
        android:textStyle="bold"
        android:textSize="24dip" 
	/>

	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="48dp"
  		android:orientation="horizontal"
  		>
  		
		<EditText 
	    	android:id="@+id/mannschaftKuerzel"
	    	android:inputType="text"
			android:layout_width="136dp"
        	android:layout_height="48dp"
		/>
		
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="48dp" 
        	android:orientation="vertical"
    	> 
    	
			<Button 
        		android:id="@+id/okay"
        		android:background="@drawable/button_green"
        		android:layout_width="60dp"
        		android:layout_height="48dp"
        		android:text="@string/okay"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
        		android:layout_gravity="right"
    		/>
			
		</LinearLayout>
		
	</LinearLayout>

    <Button 
        android:id="@+id/spieler"
        android:background="@drawable/button_blue"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/mannschaftSpielerVerwalten"
        android:textColor="@android:color/white"
        android:textSize="24dip" 
        android:layout_marginTop="20dp"
    />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp" 
        android:layout_marginTop="20dp"
        android:stretchColumns="0"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="48dp" 
        >
        	
        	<Button 
        		android:id="@+id/spielerimport"
        		android:background="@drawable/button_blue"
        		android:layout_width="0dip"
        		android:layout_height="48dp"
        		android:text="@string/mannschaftSpielerImport"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
    		/>
        	
    		<Button 
    		    android:id="@+id/spielerimportinfo"
      			android:layout_width="48dip"
      			android:layout_height="48dip"
      			android:background="@drawable/inforund"
      			android:textSize="24dip"
      			android:layout_marginLeft="10dp"
    		/>
        
    	</TableRow>
        
    </TableLayout>
   
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="80dp"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        >
        	
        	<Button 
        		android:id="@+id/save"
        		android:background="@drawable/button_green"
        		android:layout_width="fill_parent"
        		android:layout_height="48dp"
        		android:text="@string/speichern"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/delete"
        		android:background="@drawable/button_red"
        		android:layout_width="fill_parent"
        		android:layout_height="48dp"
        		android:text="@string/loeschen"
        		android:textColor="@android:color/white"
        		android:textSize="24dip" 
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>
</ScrollView>